RESOLVED FIXED19347
After the password is input , Japanese can't be input.
https://bugs.webkit.org/show_bug.cgi?id=19347
Summary After the password is input , Japanese can't be input.
Sato
Reported 2008-05-31 21:45:19 PDT
I'm using WebKit-SVN-r34279/Mac OS 10.5.3(intel). After is input in password form (<input type="password">), Japanese cannot be input to other forms. Example, "Create new account" page in Yahoo! Japan, After the password is input, the answer to a secret question cannot be input in Japanese.
Attachments
proposed fix (6.49 KB, patch)
2008-08-18 09:35 PDT, Alexey Proskuryakov
mitz: review+
Mark Rowe (bdash)
Comment 1 2008-05-31 23:36:32 PDT
Does this work correctly in Safari 3.1.1?
Mark Rowe (bdash)
Comment 2 2008-05-31 23:36:43 PDT
Sato
Comment 3 2008-06-01 07:33:47 PDT
(In reply to comment #1) > Does this work correctly in Safari 3.1.1? > When having tried now,The problem occurred in Safari 3.1.1 (5525.20). This problem seems to occur only by Leopard.The problem did not occur in Tiger.
mitz
Comment 4 2008-06-01 09:43:38 PDT
I think this is a duplicate of bug 16946.
Alexey Proskuryakov
Comment 5 2008-07-21 02:30:49 PDT
I believe that the root cause for both bugs is that we're manipulating properties on wrong documents. In this bug, TSMGetActiveDocument() returns 0 when switching from a password field to a normal one, so we fail to remove kTSMDocumentEnabledInputSourcesPropertyTag. This is caused by a hack in -[WebHTMLView inputContext], and is fixed by removing it. It's not obvious to me if bug 16946 is exactly the same, as there may be many reasons for an active document to be not what we expect. Ideally, we should find a less fragile solution.
Mark Rowe (bdash)
Comment 6 2008-08-15 04:07:45 PDT
*** Bug 20392 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 7 2008-08-18 09:35:54 PDT
Created attachment 22853 [details] proposed fix
mitz
Comment 8 2008-08-18 09:43:53 PDT
Comment on attachment 22853 [details] proposed fix Cool! r=me + Frame* coreFrame = core([self _frame]); You can use the local variable frame from the line above. Can you now remove @interface NSResponder (AppKitDetails) from WebHTMLView.mm?
Alexey Proskuryakov
Comment 9 2008-08-19 00:49:05 PDT
Committed revision 35831. I wonder how this affects bug 16946. (In reply to comment #8) > Can you now remove > @interface NSResponder (AppKitDetails) > from WebHTMLView.mm? I can't - the method is used in -[WebHTMLView mouseDown:]
Note You need to log in before you can comment on or make changes to this bug.